fix: Improve reservation security Update product and reservation views. Check reservation ownership before db updates. Add login_required. Update styles and base.html to use white text to improve readability in alert messages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,15 +78,9 @@ body, p {
     background-color: #6b705c;
     border-color: #6b705c;
 }
-  
 
-/* Change text color in success alert */
-.alert.bg-success.success {
-    color: white;  /* Changes text color to white */
-}
-
-/* Change close button (X) to white */
-.alert.bg-success.success .btn-close {
+/* Change close button (X) to white .bg-success.success*/
+.alert .btn-close {
     background-color: white; 
     filter: invert(1);  
 }
